# Computer-Vision-and-Applications

./: .gitignore
3D-Reconstruction-from-Side-by-Side-Images/: CMakeLists.txt  main.cpp  reconstructor_3d.cpp  reconstructor_3d.h
3D-Reconstruction-from-Side-by-Side-Images/SidebySide/: CalibrationData.txt
3D-Reconstruction-from-Silhouette-Images/: CMakeLists.txt  Camera Parameter.txt  camera.cpp  camera.h  main.cpp  reconstructor_3d.cpp  reconstructor_3d.h  voxel.cpp  voxel.h
docker/: Dockerfile  README.md
